--- a/.github/workflows/check-qbittorrent-version.yml
+++ b/.github/workflows/check-qbittorrent-version.yml
@@ -2,8 +2,8 @@ name: Update qBittorrent Version from Docker Hub
 
 on:
   schedule:
-    - cron: '0 6 * * *'  # Every day at 6:00 UTC
-  workflow_dispatch:
+    - cron: '0 6 * * *'  # Run every day at 06:00 UTC
+  workflow_dispatch:      # Allow manual trigger from UI
 
 jobs:
   check-version:
@@ -23,7 +23,8 @@ jobs:
       - name: Get latest Docker image tag
         id: latest
         run: |
-          latest=$(curl -s "https://registry.hub.docker.com/v2/repositories/linuxserver/qbittorrent/tags?page_size=100" | jq -r '[.results[].name | select(test("^[0-9]+\\.[0-9]+\\.[0-9]+$"))] | sort_by(split(".") | map(tonumber)) | reverse | .[0]')
+          latest=$(curl -s "https://registry.hub.docker.com/v2/repositories/linuxserver/qbittorrent/tags?page_size=100" \
+            | jq -r '[.results[].name | select(test("^[0-9]+\\.[0-9]+\\.[0-9]+$"))] | sort_by(split(".") | map(tonumber)) | reverse | .[0]')
           echo "latest_version=$latest" >> "$GITHUB_OUTPUT"
 
       - name: Get current version from config.yaml
@@ -32,23 +33,36 @@ jobs:
           current=$(yq '.options.QBT_VERSION' ./qbittorrent_nox/config.yaml)
           echo "current_version=$current" >> "$GITHUB_OUTPUT"
 
+      - name: Debug Git setup
+        run: |
+          echo "GitHub actor: ${{ github.actor }}"
+          echo "Repository: ${{ github.repository }}"
+          git remote -v
+          git config --list
+
       - name: Update config.yaml if version changed
         if: steps.latest.outputs.latest_version != steps.current.outputs.current_version
         run: |
           echo "Updating from ${{ steps.current.outputs.current_version }} to ${{ steps.latest.outputs.latest_version }}"
 
+          # Update YAML fields
           yq e '.options.QBT_VERSION = "${{ steps.latest.outputs.latest_version }}"' -i ./qbittorrent_nox/config.yaml
           yq e '.version = "${{ steps.latest.outputs.latest_version }}"' -i ./qbittorrent_nox/config.yaml
 
+          # Commit the change
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add ./qbittorrent_nox/config.yaml
           git commit -m "Update qBittorrent version to ${{ steps.latest.outputs.latest_version }}"
 
-          # Authenticated push using personal access token (you must set GH_PAT in repo secrets)
+          # Update remote to use PAT
+          echo "Setting remote with PAT..."
           git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
-          git push
+          git remote -v
+
+          # Push the change
+          git push origin HEAD:main
 
       - name: No update needed
         if: steps.latest.outputs.latest_version == steps.current.outputs.current_version
-        run: echo "Already up-to-date (version ${{ steps.current.outputs.current_version }})"
+        run: echo "Already up to date: ${{ steps.current.outputs.current_version }}"
