--- a/.github/workflows/check-qbittorrent-version.yml
+++ b/.github/workflows/check-qbittorrent-version.yml
@@ -2,7 +2,7 @@ name: Update qBittorrent Version
 
 on:
   schedule:
-    - cron: '0 2 * * *'  # every day at 2:00 UTC
+    - cron: '0 2 * * 0'  # every day at 2:00 UTC
   workflow_dispatch:
 
 jobs:
