--- a/.github/workflows/check-qbittorrent-version.yml
+++ b/.github/workflows/check-qbittorrent-version.yml
@@ -71,8 +71,7 @@ jobs:
 import feedparser, html, os, pathlib, datetime, re
 ver      = os.environ["VERSION"]
 feed     = feedparser.parse("https://www.qbittorrent.org/news_feed.atom")
-summary  = next((html.unescape(e.summary)
-                for e in feed.entries if ver in e.title), "")
+summary  = next((html.unescape(e.summary) for e in feed.entries if ver in e.title), "")
 if not summary:
     summary = f"No changelog found for v{ver}"
 
@@ -84,8 +83,7 @@ if path.exists():
     if not re.search(rf"^##\s+v{re.escape(ver)}\b", content, re.M):
         path.write_text(header + content, encoding="utf-8")
 else:
-    path.write_text("# qBittorrent-Nox Add-on Changelog\n\n" + header,
-                    encoding="utf-8")
+    path.write_text("# qBittorrent-Nox Add-on Changelog\n\n" + header,encoding="utf-8")
 PY
 
     # 7 Commit & push
