--- a/.github/workflows/check-qbittorrent-version.yml
+++ b/.github/workflows/check-qbittorrent-version.yml
@@ -50,9 +50,9 @@ jobs:
       run: |
         new="${{ steps.latest.outputs.latest_version }}"
         echo "🔄 Updating to version $new"
-        yq e '.options.QBT_VERSION = strenv(new)' -i ./qbittorrent_nox/config.yaml
-        yq e '.version            = strenv(new)' -i ./qbittorrent_nox/config.yaml
-        sed -i "s|^FROM qbittorrentofficial/qbittorrent-nox:.*|FROM qbittorrentofficial/qbittorrent-nox:${new}|" ./qbittorrent_nox/Dockerfile
+        yq e '.options.QBT_VERSION = "${{ steps.latest.outputs.latest_version }}"' -i ./qbittorrent_nox/config.yaml
+        yq e '.version = "${{ steps.latest.outputs.latest_version }}"' -i ./qbittorrent_nox/config.yaml
+        sed -i "s|^FROM qbittorrentofficial/qbittorrent-nox:.*|FROM qbittorrentofficial/qbittorrent-nox:${{ steps.latest.outputs.latest_version }}|" 
 
     - name: Update CHANGELOG.md
       if: ${{ steps.latest.outputs.latest_version != steps.current.outputs.current_version }}
