--- a/.github/workflows/check-qbittorrent-version.yml
+++ b/.github/workflows/check-qbittorrent-version.yml
@@ -52,7 +52,7 @@ jobs:
         echo "🔄 Updating to version $new"
         yq e '.options.QBT_VERSION = "${{ steps.latest.outputs.latest_version }}"' -i ./qbittorrent_nox/config.yaml
         yq e '.version = "${{ steps.latest.outputs.latest_version }}"' -i ./qbittorrent_nox/config.yaml
-        sed -i "s|^FROM qbittorrentofficial/qbittorrent-nox:.*|FROM qbittorrentofficial/qbittorrent-nox:${{ steps.latest.outputs.latest_version }}|" 
+        sed -i "s|^FROM qbittorrentofficial/qbittorrent-nox:.*|FROM qbittorrentofficial/qbittorrent-nox:${{ steps.latest.outputs.latest_version }}|" ./qbittorrent_nox/Dockerfile
 
     - name: Update CHANGELOG.md
       if: ${{ steps.latest.outputs.latest_version != steps.current.outputs.current_version }}
